--- a/src/components/stories/TaskContainerStory/TaskContainerStory.module.css
+++ b/src/components/stories/TaskContainerStory/TaskContainerStory.module.css
@@ -3,14 +3,15 @@
 
 .header {
     display: grid;
-    justify-content: space-between;
+    /* justify-content: space-between; */
+    top: 0;
     align-items: center;
     padding: 2px;
     margin: 5px;
     /* margin-right: 15px;  */
     min-width:  190px;
     width: 190px;
-    max-height: 400px;
+    max-height: 420px;
     background-color: #f0f0f0;
     border-bottom: 1px solid #ddd;
     overflow-y: scroll;
